--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
         <div class="inferior">
             <section class="esquerda">
                 <h2>Monthly Subscription</h2>
-                <div class="mês">
+                <div class="mes">
                     <p>$29</p>
                     <p>per month</p>
                 </div>
-                <div>
                     <p>Full access for less than $1 a day </p>
                     <button>Sign Up</button>
-                </div>
             </section>
             <section class="direita">
                 <h2>Why Us</h2>
